# ocaml-libdpkg

./: .gitignore  Makefile  README.md  dune-project  libdpkg.opam
bindings/: README.md  dpkg_bindings.ml  dune
bindings/functions/: dpkg_functions.ml  dune
bindings/functions/stubsgen/: dune  stubsgen.ml
bindings/types/: dpkg_types.ml  dune
bindings/types/stubsgen/: dune  types_stubsgen.ml
src/: dune  version.ml  version.mli
