opam-version: "2.0"

name: "libdpkg"
synopsis: "A wrapper around libdpkg for OCaml"
description: """
A wrapper around libdpkg for OCaml.
"""

version: "0.1.0"
license: "GPL3"

maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
authors: [ "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>" ]

homepage: "https://github.com/colis-anr/ocaml-libdpkg"
bug-reports: "https://github.com/colis-anr/ocaml-libdpkg/issues"
dev-repo: "git+ssh://git@github.com/colis-anr/ocaml-libdpkg.git"

available: [ os-family = "debian" ]
depends: [
  "ctypes"
  "ctypes-foreign"
  "dune"            {build}
  "ocaml"           {>= "4.04"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
